feat: 투어 생성 시 장소에 위도 경도 값 저장