@@ -14,8 +14,8 @@ import java.util.stream.Collectors;
 
 public class TourDtoConverter {
     public static Tour postTourRequestToTour(PostTourRequest postTourRequest) {
-        Tour tour = new Tour(postTourRequest.getName(),
-                postTourRequest.getTime(),postTourRequest.getContent());
+        Tour tour = new Tour(postTourRequest.getTourName(),
+                postTourRequest.getTourTime(),postTourRequest.getTourContent());
         return tour;
 
     }
@@ -34,14 +34,14 @@ public class TourDtoConverter {
         // 투어에 속한 장소들을 PlaceInfoDto로 변환하여 추가
         List<PlaceInfoDto> placeInfoDtos = tour.getPlaces().stream()
                 .sorted(Comparator.comparingInt(Place::getOrder))
-                .map(place -> new PlaceInfoDto(place.getId(), place.getContent(), place.getImageUrls(), place.getAddress(), place.getOrder()))
-                .collect(Collectors.toList());
+                .map(place -> new PlaceInfoDto(place.getId(), place.getContent(), place.getImageUrls(), place.getAddress(), place.getLatLng(), place.getOrder()))
+                .toList();
         getTourResponse.setPlaces(placeInfoDtos);
 
         // 투어의 카테고리 이름을 추출하여 추가
         List<String> categoryNames = tour.getTourCategories().stream()
                 .map(tc -> tc.getCategory().getName())
-                .collect(Collectors.toList());
+                .toList();
         getTourResponse.setCategoryNames(categoryNames);
 
         // 투어의 참여 유저 리스트 추가
@@ -58,8 +58,6 @@ public class TourDtoConverter {
 
         // 투어 상태, 생성 및 수정 날짜 설정
         getTourResponse.setStatus(tour.getStatus());
-        getTourResponse.setCreatedAt(tour.getCreatedAt());
-        getTourResponse.setUpdatedAt(tour.getUpdatedAt());
 
         return getTourResponse;
     }
